feat: add create task in AddTask, add TodoList and Task components, add remove task in TodoList, add improvement in Button and Input component, remove ListTask componente, add counter task created, add empty screen when without task, add empty icon, add Clipboard component, add checked and unchecked task

--- a/src/global.css
+++ b/src/global.css
@@ -25,6 +25,23 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--gray-700);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: var(--gray-500);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--gray-300);
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   color: var(--gray-100);
